[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"
mongodb = "3.1.0"
futures = "0.3"

[[bin]]
name = "rust_backend"
path = "main.rs"
